# python-ideas

./: README.md
001-interactive-window/: README.md  pyproject.toml
001-interactive-window/interactive_window/examples/: example_01_asyncio.py
duckdb-experiments/: README.md  pyproject.toml
duckdb-experiments/duckdb_experiments/examples/hive_partitions/: dev_01_hivepartitions.py
interactive-window/: README.md  pyproject.toml
interactive-window/interactive_window/examples/: asyncio_interactive_script.py
new-idea-template/: README.md  pyproject.toml
new-idea-template/new_idea_template/examples/: asyncio_interactive_script.py  interactive_table.py
new-idea-template/new_idea_template/examples/autoreload_modules/: autoreload_modules.py  some_other_module.py
plotly-experiments/: README.md  pyproject.toml
plotly-experiments/notes/: README.md  plotly-basics.md  plotly-colors.md  plotly-datashader.md  plotly-python-api-reference.md
plotly-experiments/plotly_experiments/examples/: interactive_dash.py  interactive_multiple_graph_objects.py
robotframework-tips/: README.md  pyproject.toml  robot.toml
robotframework-tips/robotframework_tips/examples/: script_without_robot_logger.py
robotframework-tips/robotframework_tips/examples/failing_test_with_exception/: Failing Test.robot  README.md
robotframework-tips/robotframework_tips/examples/failing_test_with_exception/resources/: TestCase.py
robotframework-tips/robotframework_tips/utils/: robot_structlog_listener.py  structlog_utils.py
robotframework-tips/robotframework_tips/utils/robot_listeners/: ExceptionTracebackListener.py  StructlogListener.py
utils/: README.md  arrow_utils.py  duckdb_utlis.py  file_system_utils.py  pdf_utils.py  time_utils.py
