[tool.poetry]
name = "duckdb-experiments"
version = "0.1.0"
description = ""
authors = ["suiluj <suiluj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^25.4.0"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^25.1.0"}
python-dotenv = "^1.1.0"
duckdb = "^1.3.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pandas = "^2.3.0"
pyarrow = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
