[tool.poetry]
name = "interactive-window"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^25.2.0"
polars = {extras = ["all"], version = "^1.25.2"}
pyarrow = "^18.1.0"
deltalake = "^0.25.4"
pandas = "^2.2.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.6.1"
ipykernel = "^6.29.5"
plotly = "^6.0.0"
dash = "^2.18.2"
itables = "^2.2.5"
black = {extras = ["jupyter"], version = "^25.1.0"}
tqdm = "^4.67.0"
python-dotenv = "^1.0.1"
nbconvert = "^7.16.6"
tornado = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
