[tool.poetry]
name = "plotly-experiments"
version = "0.1.0"
description = ""
authors = ["suiluj <suiluj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^25.4.0"
polars = {extras = ["all"], version = "^1.31.0"}
pyarrow = "^18.0.0"
pandas = "^2.3.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
ipykernel = "^6.29.5"
plotly = "^6.1.2"
dash = "^3.0.4"
itables = "^2.4.2"
black = {extras = ["jupyter"], version = "^25.1.0"}
tqdm = "^4.67.0"
python-dotenv = "^1.1.0"
nbconvert = "^7.16.6"
tornado = "^6.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
